cmake_minimum_required(VERSION 2.6)
include(CheckIncludeFile) 
include(CheckFunctionExists)
include(CheckLibraryExists)
project(carvfs C)
set(prefix      ${CMAKE_INSTALL_PREFIX})
set(exec_prefix ${CMAKE_INSTALL_PREFIX})
set(libdir      ${CMAKE_INSTALL_PREFIX}/lib)
set(includedir  ${CMAKE_INSTALL_PREFIX}/include)
ADD_DEFINITIONS(-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -DFUSE_USE_VERSION=22)
check_library_exists(carvpath carvpath_fragment_is_sparse "" HAVE_RECENT_CARVPATH)
IF(HAVE_RECENT_CARVPATH)
ELSE(HAVE_RECENT_CARVPATH)
  MESSAGE(FATAL_ERROR "No compatible (>= 1.0.0) version of libcarvpath found")
ENDIF(HAVE_RECENT_CARVPATH)
check_library_exists(fuse fuse_get_context "" HAVE_FUSE)
IF(HAVE_FUSE)
ELSE(HAVE_FUSE)
  MESSAGE(FATAL_ERROR "No fuse library found.")
ENDIF(HAVE_FUSE)
add_executable(carvfs carvfs.c)
target_link_libraries(carvfs carvpath fuse dl)
install_targets(/bin carvfs)
install(FILES carvfsmod.h DESTINATION include)
add_library(modraw SHARED libmodraw.c)
SET_TARGET_PROPERTIES(modraw PROPERTIES VERSION 2.3.0 SOVERSION 2)
install_targets(/lib modraw)
add_library(modblkdev SHARED libmodblkdev.c)
SET_TARGET_PROPERTIES(modblkdev PROPERTIES VERSION 2.3.0 SOVERSION 2)
install_targets(/lib modblkdev)
